--- a/Jenkins_Project/jenkinsfile
+++ b/Jenkins_Project/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
 
         stage('Checkout Code') {
     steps {
-        git 'https://github.com/SaykarPooja/Jenkins.git'
+        git branch: 'main', url: 'https://github.com/SaykarPooja/Jenkins.git'
     }
 }
 
