--- a/Jenkins_Project/jenkinsfile
+++ b/Jenkins_Project/jenkinsfile
@@ -7,13 +7,6 @@ pipeline {
 
     stages {
 
-        stage('Checkout Code') {
-    steps {
-        git branch: 'main', url: 'https://github.com/SaykarPooja/Jenkins.git'
-    }
-}
-
-
         stage('Build & Test') {
             steps {
                 sh 'mvn clean test'
@@ -22,13 +15,15 @@ pipeline {
 
         stage('SonarQube Analysis') {
             steps {
-                withSonarQubeEnv('SonarQube') {
+                withSonarQubeEnv('sonarqube') {
                     sh '''
                     mvn sonar:sonar \
-                    -Dsonar.projectKey=hello-sonar
+                    -Dsonar.projectKey=hello-sonar \
+                    -Dsonar.projectName=hello-sonar
                     '''
                 }
             }
         }
     }
 }
+
