--- a/Jenkins_Project/jenkinsfile
+++ b/Jenkins_Project/jenkinsfile
@@ -1,33 +1,14 @@
 pipeline {
     agent any
-
-    tools {
-        maven 'Maven'
-    }
+    tools { jdk 'Java 17'; maven 'Maven' }
 
     stages {
-        stage('Build & Test') {
-            steps {
-                sh 'mvn clean package'  // package will compile, test, and create .jar
-            }
-        }
-
-        stage('Archive Artifact') {
-            steps {
-                archiveArtifacts artifacts: 'target/*.jar', fingerprint: true
-            }
-        }
-
+        stage('Checkout') { steps { git 'https://github.com/<your-username>/demo-app.git' } }
+        stage('Build') { steps { sh 'mvn clean package' } }
         stage('SonarQube Analysis') {
-            steps {
-                withSonarQubeEnv('sonarqube') {
-                    sh '''
-                    mvn sonar:sonar \
-                        -Dsonar.projectKey=hello-sonar \
-                        -Dsonar.projectName=hello-sonar
-                    '''
-                }
-            }
+            environment { SONAR_TOKEN = credentials('sonar-token') }
+            steps { sh "mvn sonar:sonar -Dsonar.projectKey=demo-app -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN" }
         }
+        stage('Docker Build') { steps { sh 'docker build -t demo-app . || echo "Skipping Docker"' } }
     }
 }
