--- a/Jenkins_Project/jenkinsfile
+++ b/Jenkins_Project/jenkinsfile
@@ -3,12 +3,21 @@ pipeline {
     tools { jdk 'Java 17'; maven 'Maven' }
 
     stages {
-        stage('Checkout') { steps { git 'https://github.com/<your-username>/demo-app.git' } }
-        stage('Build') { steps { sh 'mvn clean package' } }
+        stage('Checkout') {
+            steps { git 'https://github.com/SaykarPooja/Jenkins.git' }
+        }
+
+        stage('Build') {
+            steps { sh 'mvn clean package' }
+        }
+
         stage('SonarQube Analysis') {
-            environment { SONAR_TOKEN = credentials('sonar-token') }
+            environment { SONAR_TOKEN = credentials('sonar') }
             steps { sh "mvn sonar:sonar -Dsonar.projectKey=demo-app -Dsonar.host.url=http://localhost:9000 -Dsonar.login=$SONAR_TOKEN" }
         }
-        stage('Docker Build') { steps { sh 'docker build -t demo-app . || echo "Skipping Docker"' } }
+
+        stage('Docker Build') {
+            steps { sh 'docker build -t demo-app . || echo "Skipping Docker"' }
+        }
     }
 }
